src/css/section/favorites.css
.favorites-hero {
  padding: 25px 20px 20px 20px;
  margin: 0 auto;
}

.favorites-hero-image {
  margin: 0 auto;
  width: 335px;
  height: 516px;
  background-image: url('../../img/favorites/hero-favorites-mobile.webp');

  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  border-radius: 15px;
}

@media only screen and (min-width: 768px) {
  .favorites-hero {
    padding: 18px 32px 32px 32px;
  }
  .favorites-hero-image {
    width: 704px;
    height: 356px;
    background-image: url('../../img/favorites/hero-favorites-tablet.webp');
  }
}

@media only screen and (min-width: 1280px) {
  .favorites-hero {
    padding: 20px 100px 32px 100px;
  }

  .favorites-hero-image {
    width: 1080px;
    height: 356px;

    background-image: url('../../img/favorites/hero-favorites-desktop.webp');
  }
}

/* ============================================== */

.favorites-categories-container {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: center;
  overflow: scroll;
  padding: 20px 20px 12px 20px;
}

@media only screen and (min-width: 768px) {
  .favorites-categories-container {
        padding: 32px 32px 16px 32px;
  }
}

@media only screen and (min-width: 1280px) {
  .favorites-categories-container {
    padding: 32px 100px 16px 100px;
  }
}

.favorites-cards-filter {
  display: flex;
  height: 48px;
  justify-content: left;
  flex-wrap: nowrap;
  gap: 12px;
}

@media only screen and (min-width: 768px) {
  .favorites-cards-filter {
    gap: 15px;
  }
}

.btn-favorites-filter {
  min-width: max-content;
  padding: 14px 18px;

  color: var(--color-selector-categ-text);
  border: 1px solid var(--color-selector-categ);
  transition: background-color var(--transition-dur-func),
    color var(--transition-dur-func);
}

.btn-favorites-filter-active {
  background-color: var(--color-hover-bcg);
  color: var(--color-button-bcg);
}

.btn-favorites-filter:hover,
.btn-favorites-filter:focus {
  color: var(--color-button-bcg);
}

/* ========================================= */

.favorites-recipes-container {
  padding: 12px 20px 60px 20px;
  width: 375px;
  margin: 0 auto;
}

@media only screen and (min-width: 768px) {
  .favorites-recipes-container {
    padding: 16px 32px 60px 32px;
    width: 768px;
  }
}

@media only screen and (min-width: 1280px) {
  .favorites-recipes-container {
    padding: 16px 100px 60px 100px;
    width: 1280px;
  }
}

/* ========================================= */

 .favorites-cards-container {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 24px;
}

@media only screen and (min-width: 768px) {
  .favorites-cards-container {
    flex-direction: row;
    gap: 16px;
  }

  .favorites-cards-container .js-recipe {
    width: 224px;
    height: 244px;
  }
}

@media only screen and (min-width: 1280px) {
  .favorites-cards-container .js-recipe {
    width: 258px;
    height: 287px;
  }
}
/* ======================================= */

.favorites-empty-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  height: calc(100vh - 120px);
}

.favorites-empty-container-text {
  display: block;
  text-align: center;
  color: var(--color-title-text);
}

.favorites-empty-container-logo {
  display: block;
  margin-bottom: 24px;
}

@media only screen and (min-width: 768px) {
  .favorites-empty-container-text {
    display: block;
    max-width: 480px;
    text-align: center;
  }

  .favorites-empty-container-logo {
    display: block;
    margin-bottom: 36px;
  }

  .favorites-empty-container {
    height: 100%;
  }
}

.hidden-empty {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;

  animation-name: filter;
  animation-duration: 2s;
  animation-fill-mode: forwards;
}

@keyframes filter {
  to {
    height: 0;
    width: 0;
  }
}

